Sat Feb 23 21:27:10 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups.[ch]: Add 'ups.status' and 'ups.alarm' processing.
 - drivers/mge-xml.c: Create mapping between XML and NUT variables.

Fri Feb 22 20:11:33 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - man/usbhid-ups.8: Added cautionary warning for unattended shutdowns.

Fri Feb 22 19:14:04 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/*.c: The upscli_disconnect() function does no longer LOGOUT
   from the server. Adding this to the clients that use this to prevent
   the server from logging warnings.

Fri Feb 22 18:45:54 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/mge-hid.c: HU_FLAG_ABSENT implies that the value isn't stored
   in the UPS, so the HU_FLAG_STATIC is redundant.
 - drivers/usbhid-ups.c: Allow changing server side variables (bugfix).

Fri Feb 22 09:52:24 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/*-hid.c: Commit r1314 accidentally removed the 'shutdown.stop'
   command, where it should have been 'shutdown.stayoff' that needed to
   be removed.
 - drivers/usbhid-ups.c: The 'shutdown.return' and 'shutdown.stayoff'
   commands are now 'composite' commands. If the UPS follows the HID PDC
   specification, these act as supposed to be by the NUT standards.

Wed Feb 20 22:31:56 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/skel.c: Added setvar function. 

Wed Feb 20 22:31:38 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups.[ch],drivers/mge-xml.c: Integration work in NUT
   started. Supports currently one (1) variable. Work in progress!

Wed Feb 20 21:29:54 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/*-hid.c: Removed 'shutdown.return' and 'shutdown.stop' commands
   from the USB HID subdrivers, since they currently don't conform to the
   NUT standards for these commands.
 - drivers/usbhid-ups.c: The 'upsdrv_shutdown()' function now uses the