@@ -1,3 +1,7 @@
+Sun Feb 24 11:17:36 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
+
+ - netxml-ups: Add autoconf and configure magic.
+
 Sat Feb 23 21:27:10 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
 
  - drivers/netxml-ups.[ch]: Add 'ups.status' and 'ups.alarm' processing.
